Use List.getLast() in mdsal-binding-dom-adapter
We have getLast() available, let's not open-code it.

Change-Id: Ia4b4d754dae6589ef0e5d5dc4ed64055647e5e38
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>